--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -7,7 +7,6 @@
 	margin: 0;
 	padding: 0;
 }
-
 .navbar ul li {
 	list-style: none;
 	display: inline-block;
@@ -21,7 +20,25 @@
 	color: #565673;
 	padding: 0 10px;
 }
-.search {
+.search form {
 	display: flex;
 	margin: 0 10px;
+}
+
+.searchInput {
+	border: 0;
+	width: 0;
+	transition: width 0.1s ease-in;
+}
+
+.searchInput.active {
+	width: 150px;
+}
+
+.searchInput:focus {
+	outline: none;
+}
+
+.searchIcon {
+	cursor: pointer;
 }
