Progress in Blogpost

--- a/src/components/BlogPost/style.css
+++ b/src/components/BlogPost/style.css
@@ -1,5 +1,6 @@
 .blogPostContainer {
 	width: 70%;
+
 }
 
 .blogHeader {
@@ -16,4 +17,25 @@
 	text-transform: capitalize;
 	font-size: 30px;
 	margin: 0;
+	font-weight: 400;
+}
+
+.postedBy{
+	font-size: 15px;
+	font-style: italic;
+	padding: 10px 0;
+	display: block;
+}
+
+.postImageContainer{
+	width: 100%;
+	padding: 10px;
+	/* remains in box */
+	box-sizing: border-box;
+
+}
+
+.postImageContainer img{
+	max-width: 100%;
+	max-height: 100%;
 }
