--- a/src/containers/Home/style.css
+++ b/src/containers/Home/style.css
@@ -5,16 +5,22 @@
 
 .sideImageWrapper div {
   width: 100%;
+  height: 450px;
 }
 
 .sideImageWrapper div img {
-  max-width: 100%;
+  width: 100%;
   max-height: 100%;
   object-fit: cover;
 }
 
-.HomeContainer {
-  display: flex;
-  justify-content: space-between;
-  margin: 20px 0;
+.mainImageWrapper {
+  width: 100%;
+  height: 450px;
+}
+
+.mainImageWrapper img {
+  width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
