--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -47,3 +47,48 @@
 	font-weight: 400;
 	color: #6c6c66
 }
+.icons{
+	list-style-type: none;
+	display: flex;
+	margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 62px;
+}
+
+.fa {
+	height: 35px;
+    width: 35px;
+    text-align: center;
+    line-height: 35px;
+    color: #fff;
+    border: 1px solid transparent;
+    background: #53a2d5;
+    margin: 0 2px 4px;
+    font-size: 14px;
+	border-radius: 50%;
+	text-decoration: none;
+  
+  }
+  .fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-twitter {
+	background: #55ACEE;
+	color: white;
+  }
+  .fa-pinterest {
+	background: #cb2027;
+	color: white;
+  }
+  .fa-instagram {
+	background: #125688;
+	color: white;
+  }
+  
